Rename internalResources to associatedTopology
