# ignition/openapi/resource-driver.yaml
@@ -18,7 +18,7 @@ paths:
       summary: Find an external Resource
       description: >-
         This API is used by Brent to handle finding external Resources it does not manage directly.
-        If the Resource can be found, then the internalResources and property outputs should be returned. If the Resource cannot be found, an empty result should be returned instead.
+        If the Resource can be found, then the associatedTopology and property outputs should be returned. If the Resource cannot be found, an empty result should be returned instead.
       operationId: .find_reference
       requestBody:
         content:
@@ -122,10 +122,10 @@ components:
           allOf:
           - $ref: "#/components/schemas/Properties"
           description: properties of this request
-        internalResources:
-          description: Internal resources associated to the Resource created in any previous transition/operation requests
+        associatedTopology:
+          description: External elements associated to the Resource in any previous transition/operation requests
           allOf:
-          - $ref: "#/components/schemas/InternalResources"
+          - $ref: "#/components/schemas/AssociatedTopology"
         deploymentLocation:
           $ref: "#/components/schemas/DeploymentLocation"
       required:
@@ -133,7 +133,7 @@ components:
         - systemProperties
         - deploymentLocation
         - driverFiles
-    InternalResources:
+    AssociatedTopology:
       type: array
       items:
         type: object
@@ -194,10 +194,10 @@ components:
         requestId:
           type: string
           description: ID associated to the request handling the execution
-        internalResources:
-          description: Internal resources associated to the Resource during the acceptance of this request
+        associatedTopology:
+          description: External elements associated to the Resource during the acceptance of this request
           allOf:
-          - $ref: "#/components/schemas/InternalResources"
+          - $ref: "#/components/schemas/AssociatedTopology"
       required:
         - requestId
     LifecycleExecutionAsyncResponse:
@@ -213,10 +213,10 @@ components:
         outputs:
           type: object
           description: Output values to assign to properties of the Resource
-        internalResources:
-          description: Internal resources associated to the Resource during the handling of this request
+        associatedTopology:
+          description: External elements associated to the Resource during the handling of this request
           allOf:
-          - $ref: "#/components/schemas/InternalResources"
+          - $ref: "#/components/schemas/AssociatedTopology"
     DeploymentLocation:
       type: object
       description: A Deployment Location to manage Resources in
@@ -280,10 +280,10 @@ components:
           description: Details of the result, if found. This will be empty if the Resource was not found
           type: object
           properties:
-            internalResources:
+            associatedTopology:
               description: Internal resources associated to the Resource
               allOf:
-              - $ref: "#/components/schemas/InternalResources"
+              - $ref: "#/components/schemas/AssociatedTopology"
             outputs:
               type: object
               description: Output values to assign to properties of the Resource
@@ -301,7 +301,7 @@ components:
         lifecycleName: Start
         driverFiles:
         requestProperties: {}
-        internalResources:
+        associatedTopology:
           - type: Openstack.Stack
             name: CreatedStack
             value: 1ebc1231-3580-4044-a3e6-3ad745099c1e
@@ -321,7 +321,7 @@ components:
     ExampleLifecycleExecutionAcceptedResponse:
       value:
         requestId: 2b84e4da-663c-41a5-a637-8695fcec314f
-        internalResources:
+        associatedTopology:
           - type: Openstack.Stack
             name: CreatedStack
             value: 1ebc1231-3580-4044-a3e6-3ad745099c1e
@@ -350,7 +350,7 @@ components:
     ExampleFindReferenceResponse:
       value:
         result:
-          internalResources:
+          associatedTopology:
           - type: OpenstackStack
             name: StackId
             value: 1ebc1231-3580-4044-a3e6-3ad745099c1e
