# ignition/service/resourcedriver.py
@@ -3,7 +3,7 @@ from ignition.service.config import ConfigurationPropertiesGroup, ConfigurationP
 from ignition.service.api import BaseController
 from ignition.model.lifecycle import LifecycleExecution, LifecycleExecuteResponse, lifecycle_execution_dict, lifecycle_execute_response_dict, STATUS_COMPLETE, STATUS_FAILED
 from ignition.model.references import FindReferenceResponse, FindReferenceResult, find_reference_response_dict
-from ignition.model.internal_resources import InternalResources
+from ignition.model.associated_topology import AssociatedTopology
 from ignition.service.messaging import Message, Envelope, JsonContent, TopicConfigProperties
 from ignition.utils.file import DirectoryTree
 from ignition.api.exceptions import ApiException
@@ -94,7 +94,7 @@ class ResourceDriverHandlerCapability(Capability):
         :param ignition.utils.propvaluemap.PropValueMap system_properties: properties generated by LM for this Resource: resourceId, resourceName, requestId, metricKey, resourceManagerId, deploymentLocation, resourceType
         :param ignition.utils.propvaluemap.PropValueMap resource_properties: property values of the Resource
         :param ignition.utils.propvaluemap.PropValueMap request_properties: property values of this request
-        :param ignition.model.internal_resources.InternalResources internal_resources: 3rd party resources associated to the Resource, from any previous transition/operation requests
+        :param ignition.model.associated_topology.AssociatedTopology internal_resources: 3rd party resources associated to the Resource, from any previous transition/operation requests
         :param dict deployment_location: the deployment location the Resource is assigned to
         :return: an ignition.model.lifecycle.LifecycleExecuteResponse
 
@@ -201,7 +201,7 @@ class ResourceDriverApiService(Service, ResourceDriverApiCapability, BaseControl
             system_properties = self.get_body_required_field(body, 'systemProperties')
             resource_properties = self.get_body_field(body, 'resourceProperties', {})
             request_properties = self.get_body_field(body, 'requestProperties', {})
-            internal_resources = self.get_body_field(body, 'internalResources', [])
+            internal_resources = self.get_body_field(body, 'associatedTopology', [])
             deployment_location = self.get_body_required_field(body, 'deploymentLocation')
             execute_response = self.service.execute_lifecycle(lifecycle_name, driver_files, system_properties, resource_properties, request_properties, internal_resources, deployment_location)
             response = lifecycle_execute_response_dict(execute_response)
@@ -268,7 +268,7 @@ class ResourceDriverService(Service, ResourceDriverServiceCapability):
         else:
             file_name = '{0}'.format(str(uuid.uuid4()))
             driver_files_tree = self.driver_files_manager.build_tree(file_name, driver_files)
-            internal_resources = InternalResources.from_list(internal_resources)
+            internal_resources = AssociatedTopology.from_list(internal_resources)
             execute_response = self.handler.execute_lifecycle(lifecycle_name, driver_files_tree, PropValueMap(system_properties), PropValueMap(resource_properties), PropValueMap(request_properties), internal_resources, deployment_location)
             if self.async_enabled is True:
                 self.__async_lifecycle_execution_completion(execute_response.request_id, deployment_location)
