# ignition/templates/resource_additions/{(app.module_name)}/service/resourcedriver.py
@@ -17,7 +17,7 @@ class ResourceDriverHandler(Service, ResourceDriverHandlerCapability):
         :param ignition.utils.propvaluemap.PropValueMap system_properties: properties generated by LM for this Resource: resourceId, resourceName, requestId, metricKey, resourceManagerId, deploymentLocation, resourceType
         :param ignition.utils.propvaluemap.PropValueMap resource_properties: property values of the Resource
         :param ignition.utils.propvaluemap.PropValueMap request_properties: property values of this request
-        :param ignition.model.internal_resources.InternalResources internal_resources: 3rd party resources associated to the Resource, from any previous transition/operation requests
+        :param ignition.model.associated_topology.AssociatedTopology internal_resources: 3rd party resources associated to the Resource, from any previous transition/operation requests
         :param dict deployment_location: the deployment location the Resource is assigned to
         :return: an ignition.model.lifecycle.LifecycleExecuteResponse
 
